# guitar-tabs-app

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/x01/: main.py  pedalboard_test.py
experiments/x02/: app_01.py  app_02.py  app_03.py  data_pipeline.py
experiments/x03/: app.py  app_0.py  chatgpt_layout.py  note_conversions.py  synthesis.py  transformations.py  validation.py
experiments/x03/processing/: exporting.py  pipeline.py  synthesis.py  types.py  validation.py
guitar_tabs_app/: __init__.py  exporting.py  note_conversions.py  streamlit_app.py  synthesis.py  transformations.py  validation.py
